[project]
name = "Flask-RQ"
version = "0.2"
description="RQ (Redis Queue) integration for Flask applications"
readme = "README.md"
license = { file = "LICENSE" }
author = [{ name = "Matthew Wright"}]
maintainers = [{name = "Pallets Ecosystem", email = "contact@palletsprojects.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Flask",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "flask>=2.3.0",
    "rq>=1.16.2",
]

[project.urls]
Documentation = "https://pythonhosted.org/Flask-RQ/"
Changes = "https://github.com/pallets-eco/flask-rq/releases"
Source = "https://github.com/pallets-eco/flask-rq"
Chat = "https://discord.gg/pallets"

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "flask_rq"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "error",
]

[tool.coverage.run]
branch = true
source = ["flask_rq", "tests"]

[tool.coverage.paths]
source = ["flask_rq.py"]